# my-haskell-app

./: .gitignore  README.md  mise.toml  my-haskell-app.cabal
app/: Main.hs
src/: Api.hs  Lib.hs  Server.hs
src/Application/: BookService.hs  Types.hs  UserService.hs
src/Domain/: Book.hs  Common.hs  User.hs
src/Infrastructure/Api/: BookApi.hs  HealthApi.hs  UserApi.hs
src/Infrastructure/Repository/: BookRepository.hs  UserRepository.hs
src/Shared/: AppHandler.hs  Types.hs
src/Slices/Books/: GetBooks.hs  Types.hs
src/Slices/Health/: GetHealth.hs
src/Slices/Users/: GetUser.hs  GetUsers.hs  PostUser.hs  Types.hs
